# haddock-example

./: CHANGELOG.md  LICENSE  README.md  haddock-example.cabal
internal/: Internal.hs
src/: HaddockExample.hs
