name:                haddock-example
version:             0.0.0
description:         Provide simple example for haddock issue with existentional type
synopsis:            Provide simple example for haddock issue with existentional type
homepage:            https://github.com/vrom911/haddock-example
bug-reports:         https://github.com/vrom911/haddock-example/issues
license:             MIT
license-file:        LICENSE
author:              Veronika Romashkina
maintainer:          vrom911@gmail.com
copyright:           2018 Veronika Romashkina
category:            Example
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
cabal-version:       1.24
tested-with:         GHC == 8.2.2

library
  hs-source-dirs:      src
  exposed-modules:     HaddockExample
  ghc-options:         -Wall
  build-depends:       base
                     , internal

library internal
  hs-source-dirs:      internal
  exposed-modules:     Internal
  ghc-options:         -Wall
  build-depends:       base

  default-language:    Haskell2010
